unpackaged/main/default/objects/Contact_Certification__c/Contact_Certification__c.object-meta.xml
<CustomObject>
    <label>Contact Certification</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>Contact Certification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>