unpackaged/main/default/objects/Contact_Certification__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Certifications</relationshipLabel>
    <relationshipName>Contact_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>