unpackaged/main/default/objects/Contact_Certification__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contact Certifications</relationshipLabel>
    <relationshipName>Contact_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>