unpackaged/main/default/objects/Contact_Certification__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <type>DateTime</type>
</CustomField>